--- a/src/index.css
+++ b/src/index.css
@@ -222,8 +222,30 @@
 .cloud {
   @apply absolute rounded-full;
   background-color: rgba(255, 255, 255, 0.8);
-  filter: blur(20px);
+  filter: blur(15px);
   animation: drifting-cloud linear infinite;
+}
+
+.cloud::before,
+.cloud::after {
+  content: "";
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 50%;
+}
+
+.cloud::before {
+  width: 60%;
+  height: 60%;
+  top: -30%;
+  left: 20%;
+}
+
+.cloud::after {
+  width: 70%;
+  height: 70%;
+  top: -20%;
+  right: 10%;
 }
 
 @keyframes drifting-cloud {
@@ -255,6 +277,19 @@
   background: radial-gradient(circle at center, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 50%);
   animation: lens-flare 8s infinite linear;
   opacity: 0.5;
+}
+
+.moon {
+  position: absolute;
+  top: 15%;
+  right: 15%;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: transparent;
+  box-shadow: -25px 10px 0 0px #edeacc;
+  animation: float 8s ease-in-out infinite;
+  filter: blur(8px);
 }
 
 @keyframes lens-flare {
